[package]
name = "bnf-graph-visualizer-2"
version = "0.1.0"
edition = "2024"

[dependencies]
bnf = { git = "https://github.com/FabianVegaA/bnf.git", branch = "main" }
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
chrono = "0.4"
env_logger = "0.11.8"
fern = "0.7"
futures = "0.3.31"
log = "0.4.28"
ollama-rs = "0.3.2"
rand = "0.9.2"
regex = "1.10"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = { version = "0.2.0-alpha.6" }
